# roar_ros_inference_node

install/: local_setup.sh  setup.sh
install/inference_interfaces/share/inference_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/inference_interfaces/: CMakeLists.txt
src/inference_interfaces/msg/: InferenceResult.msg  YoloInferenceBox.msg
src/py_yolo_inference_node/: package.xml  publisher_member_function.py  setup.cfg  setup.py  tensorrt_exp.ipynb
src/py_yolo_inference_node/py_yolo_inference_node/: publisher_member_function.py
