<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_yolo_inference_node</name>
  <version>0.0.0</version>
  <description>YOLOv7 Inference Node in ROS</description>
  <maintainer email="caoyh2001@berkeley.edu">Yunhao Cao</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>inference_interfaces</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>onnx</exec_depend>
  <exec_depend>onnx_tensorrt</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
